tests/ui/03-arbitrary-type.stderr
warning: possibly invalid system parameter
 --> tests/ui/03-arbitrary-type.rs:7:14
  |
7 | fn system(_: Foo) {}
  |              ^^^
  |
  = note: bevycheck can't figure out whether `Foo` is a valid system param
  = help: to use it as a resource, use `Res<Foo>` or `ResMut<Foo>`

error[E0277]: the trait bound `Foo: SystemParam` is not satisfied
 --> tests/ui/03-arbitrary-type.rs:7:14
  |
7 | fn system(_: Foo) {}
  |              ^^^ the trait `SystemParam` is not implemented for `Foo`
  |
  = help: the following other types implement trait `SystemParam`:
            &'a Archetypes
            &'a Bundles
            &'a Entities
            &'a bevy::ecs::component::Components
            &'w World
            ()
            (P0, P1)
            (P0, P1, P2)
          and $N others
note: required by a bound in `is_system_param`
 --> tests/ui/03-arbitrary-type.rs:6:1
  |
6 | #[bevycheck::system]
  | ^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_system_param`
  = note: this error originates in the attribute macro `bevycheck::system` (in Nightly builds, run with -Z macro-backtrace for more info)
